# naevia

./: .gitignore  Cargo.toml  README.md  index.html
src/: generated.rs  main.rs
src/rpc/: methods.rs  mod.rs
tests/: go.mod  main.go  test.pb.go
tests/proto/: buf.gen.yaml  test.proto
